--- a/project/algorithm_A.html
+++ b/project/algorithm_A.html
@@ -1,59 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A* Pathfinding Visualization</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; 
-      background-color: #121212;
-      color: #ffffff;}
-    
+    body {
+      margin: 0;
+      font-family: 'Roboto', Arial, sans-serif;
+      background: linear-gradient(135deg, #1a73e8, #003b70);
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    /* Header */
+    header {
+      width: 100%;
+      text-align: center;
+      padding: 20px 0;
+      background: rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+      font-size: 1.5rem;
+    }
+
     #controls {
       position: fixed;
-      top: 20px;
+      top: 80px;
       left: 20px;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 15px;
-      border-radius: 5px;
+      background: rgba(32, 32, 48, 0.9);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       z-index: 10;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      max-width: 200px;
+      text-align: center;
     }
 
-    button {
-      background-color: #4CAF50;
-      color: white;
+    #controls button {
+      background: linear-gradient(90deg, #3498db, #6dd5ed);
+      color: #ffffff;
       border: none;
-      padding: 10px;
-      margin-bottom: 10px;
+      padding: 12px;
+      margin: 8px 0;
       width: 100%;
       cursor: pointer;
-      border-radius: 5px;
-      font-size: 16px;
+      border-radius: 8px;
+      font-size: 1rem;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
 
-    button:hover {
-      background-color: #45a049;
+    #controls button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
 
-    canvas { 
-      display: block; 
-      margin-top: 60px;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: #f0f0f0;
+    #controls p {
+      font-size: 0.9rem;
+      color: #cccccc;
+      margin-top: 10px;
     }
 
-    p {
-      font-size: 14px;
-      color: #333;
+    #controls button#resetGrid {
+      background: linear-gradient(135deg, #ff4757, #ff6b81);
+    }
+
+    #controls button#resetGrid:hover {
+      background: linear-gradient(135deg, #ff6b81, #ff4757);
+    }
+
+    #controls button#resetGrid:active {
+      background: linear-gradient(135deg, #e84118, #ff6348);
+    }
+
+    canvas {
+      display: block;
+      margin: 20px auto;
+      background: #2c2c3e;
+      border: 2px solid #4caf50;
+      border-radius: 10px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
+<header>
+  A* Pathfinding Visualization
+</header>
+
 <body>
   <div id="controls">
     <button onclick="startAStar()">Start A*</button>
-    <button onclick="resetGrid()">Reset Grid</button>
+    <button id="resetGrid" onclick="resetGrid()">Reset Grid</button>
     <p>Click and drag to place obstacles. Click to set start/end points.</p>
   </div>
   <canvas id="pathCanvas"></canvas>
@@ -255,4 +297,5 @@
     drawGrid();
   </script>
 </body>
+
 </html>
